// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TaskListHours renders correctly 1`] = `
<span
  className="task-list-hours"
>
  <span
    className="label label-info"
  >
    0s
  </span>
</span>
`;

exports[`TaskListHours renders correctly 2`] = `
<span
  className="task-list-hours"
>
  <span
    className="label label-info"
  >
    1h 0m
  </span>
</span>
`;
